--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -17,6 +17,8 @@
   <%= link_to "Click here", root_path %> to login with your new password.
 </p>
 
+<%= render '_notifications' %>
+
 <p>
   Att,<br/>
   Holiday Manager
