--- a/app/views/user_mailer/holiday_notification_admin.html.erb
+++ b/app/views/user_mailer/holiday_notification_admin.html.erb
@@ -10,7 +10,7 @@
   Please, <%= link_to "Click here", edit_admin_holiday_path(@holiday) %> to change the status of this holiday!
 </p>
 
-<%= render '_notifications' %>
+<%= render 'notifications' %>
 
 <p>
   Att,<br/>
