--- a/app/views/user_mailer/holiday_notification_confirmed.html.erb
+++ b/app/views/user_mailer/holiday_notification_confirmed.html.erb
@@ -12,7 +12,7 @@
   <%= link_to "Click here", holidays_path %> to see your holidays.
 </p>
 
-<%= render '_notifications' %>
+<%= render 'notifications' %>
 
 <p>
   Att,<br/>
