--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -14,7 +14,7 @@
 
 ----------------------------------------
 <p>
-  <%= link_to "Click here", root_path %> to login with your new password.
+  <%= link_to "Click here", root_url %> to login with your new password.
 </p>
 
 <%= render 'notifications' %>
