--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -19,7 +19,7 @@
 
 ----------------------------------------
 <p>
-  <%= link_to "Click here", root_path %> to login with your new account.
+  <%= link_to "Click here", root_url %> to login with your new account.
 </p>
 
 <p>
