--- a/app/views/user_mailer/holiday_notification_status.html.erb
+++ b/app/views/user_mailer/holiday_notification_status.html.erb
@@ -16,7 +16,7 @@
 <%= render 'info_holidays' %>
 
 <p>
-  <%= link_to "Click here", holidays_path %> to see your holidays.
+  <%= link_to "Click here", holidays_url %> to see your holidays.
 </p>
 
 <%= render 'notifications' %>
